--- a/css/style.css
+++ b/css/style.css
@@ -2277,8 +2277,8 @@ input[type="button"].btn-block {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url('/sites/all/themes/cbootf/bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: url('/sites/all/themes/cbootf/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/sites/all/themes/cbootf/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/sites/all/themes/cbootf/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/sites/all/themes/cbootf/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
