--- a/less/variables.less
+++ b/less/variables.less
@@ -74,7 +74,7 @@
 // Iconography
 // -------------------------
 
-@icon-font-path:          "../fonts/";
+@icon-font-path:          "/sites/all/themes/cbootf/bootstrap/fonts/";
 @icon-font-name:          "glyphicons-halflings-regular";
 
 
