Hide 'for-christian-content' on Tracy Trinita page

--- a/css/style.css
+++ b/css/style.css
@@ -8834,6 +8834,9 @@ textarea.webform-component input.email {
 .link-button a {
   color: white;
 }
+.page-node-2390 .for-christian-content {
+  display: none;
+}
 .footer {
   border: 0px;
   margin-top: 0px;
