Add Canberra to cbootf_city_string() and to menu CSS

--- a/css/style.css
+++ b/css/style.css
@@ -6729,8 +6729,9 @@ table .checkbox input[type="checkbox"] {
 }
 .city-adelaide .menu-adelaide,
 .city-brisbane .menu-brisbane,
-.city-perth .menu-perth,
+.city-canberra .menu-canberra,
 .city-melbourne .menu-melbourne,
+.city-perth .menu-perth,
 .city-sydney .menu-sydney {
   font-weight: bold;
 }
