--- a/less/header.less
+++ b/less/header.less
@@ -116,8 +116,9 @@
 
 .city-adelaide 	.menu-adelaide,
 .city-brisbane	.menu-brisbane,
-.city-perth	.menu-perth,
+.city-canberra	.menu-canberra,
 .city-melbourne	.menu-melbourne,
+.city-perth	.menu-perth,
 .city-sydney	.menu-sydney {
 	font-weight: bold;
 }
