Allow Activity to Event block to be overridden

--- a/css/style.css
+++ b/css/style.css
@@ -8838,6 +8838,9 @@ textarea.webform-component input.email {
 .page-node-2390 .for-christian-content {
   display: none;
 }
+.override-activity-events #block-views-activity-to-event-block {
+  display: none;
+}
 .footer {
   border: 0px;
   margin-top: 0px;
