--- a/less/content.less
+++ b/less/content.less
@@ -696,3 +696,7 @@
 .page-node-2390 .for-christian-content {
   display: none;
 }
+
+.override-activity-events #block-views-activity-to-event-block {
+  display: none; // Don't display the Activity to Event block if another block overrides it
+}
