Allow Activity to Event block to be overridden

--- a/less/content.less
+++ b/less/content.less
@@ -697,6 +697,6 @@
   display: none;
 }
 
-.override-activity-events #block-views-activity-to-event-block {
+.override-activity-events + #block-views-activity-to-event-block {
   display: none; // Don't display the Activity to Event block if another block overrides it
 }
