--- a/less/content.less
+++ b/less/content.less
@@ -382,7 +382,6 @@
 			width: 50%;
 			padding-left:  @grid-gutter-width;
 			margin-right: ( ( @grid-gutter-width / 2 ) - 10px );
-			margin-bottom: 15px;
 
 			a {
 				.badge;
@@ -460,9 +459,16 @@
 		.field-name-body,
 		.field-name-field-content,
 		.field-name-field-video,
-		.field-name-field-civievent,
-		.field-name-field-add-to-calendar {
+		.field-name-field-civievent {
 			margin-bottom: 15px;
+		}
+
+		.field-name-field-add-to-calendar {
+			margin-bottom: 0px;
+
+			ul {
+				margin-bottom: 15px;
+			}
 		}
 
 		.field-name-field-video {
