Adjust guttering on images and CiviEvent fields

--- a/less/content.less
+++ b/less/content.less
@@ -408,7 +408,8 @@
 			float: right;
 			clear: right;
 			width: 50%;
-			padding-left:  @grid-gutter-width;
+			padding-left: ( @grid-gutter-width / 2);
+			margin-left: ( @grid-gutter-width / 2);
 
 			a {
 				.badge;
@@ -468,7 +469,8 @@
 			float: right;
 			clear: right;
 			width: 50%;
-			padding-left:  @grid-gutter-width;
+			padding-left: ( @grid-gutter-width / 2);
+			margin-left: ( @grid-gutter-width / 2);
 
 			img {
 				.img-responsive;
