--- a/css/style.css
+++ b/css/style.css
@@ -8345,7 +8345,8 @@ table .checkbox input[type="checkbox"] {
   float: right;
   clear: right;
   width: 50%;
-  padding-left: 30px;
+  padding-left: 15px;
+  margin-left: 15px;
 }
 .content-region .block-system .block-panel .content .field-name-field-civievent a,
 .content-region .block-system .block-panel .content .field-name-field-add-to-calendar a {
@@ -8421,7 +8422,8 @@ table .checkbox input[type="checkbox"] {
   float: right;
   clear: right;
   width: 50%;
-  padding-left: 30px;
+  padding-left: 15px;
+  margin-left: 15px;
 }
 .content-region .block-system .block-panel .content .field-name-field-image img,
 .content-region .block-system .block-panel .content .field-name-field-series-image img {
