Adjust guttering on 'submitted' text

--- a/less/content.less
+++ b/less/content.less
@@ -372,7 +372,7 @@
 
 					.crm-marker {
 						float: right;
-						margin-right: -15px;
+						margin-right: -( @grid-gutter-width / 2);
 					}
 				}
 
@@ -391,16 +391,16 @@
 
 .content-region .block-system .block-panel {
 	.submitted {
-		padding: 0 10px;
+		padding: 0 ( @grid-gutter-width / 2);
 	}
 
 	.view-content {
-		padding: 15px;
+		padding: ( @grid-gutter-width / 2);
 		padding-top: 0;
 	}
 
 	.content {
-		padding: 15px;
+		padding: ( @grid-gutter-width / 2);
 
 		.field-name-field-civievent,
 		.field-name-field-add-to-calendar {
