--- a/less/content.less
+++ b/less/content.less
@@ -217,10 +217,10 @@
 					}
 
 					background-color: @cbf-light-blue;
-					float: right;
 					width: 100%;
 					max-width: 280px;
-					padding: 5px;
+					padding: 10px;
+					border-radius: 20px;
 					color: white;
 				}
 
@@ -424,7 +424,8 @@
 				float: right;
 				width: 100%;
 				max-width: 280px;
-				padding: 5px;
+				padding: 10px;
+				border-radius: 20px;
 				color: white;
 			}
 
