Use contextual links for actions on Nodes. Affects staff only.

--- a/less/content.less
+++ b/less/content.less
@@ -675,6 +675,12 @@
 	}
 }
 
+.page-node {
+  .tabs--primary.nav-tabs {
+    display: none;
+  }
+}
+
 .view-campus-homepage,
 .view-display-id-national,
 #block-views-6c65b09662158a51b164e9a15d88b8ac,
