--- a/css/style.css
+++ b/css/style.css
@@ -8815,6 +8815,9 @@ textarea.webform-component input.email {
     width: 50%;
   }
 }
+.page-node .tabs--primary.nav-tabs {
+  display: none;
+}
 .view-campus-homepage,
 .view-display-id-national,
 #block-views-6c65b09662158a51b164e9a15d88b8ac,
