--- a/less/content.less
+++ b/less/content.less
@@ -735,10 +735,10 @@
 	}
 }
 
-.page-node-2390 .for-christian-content {
-  display: none;
+.page-node-2390 {
+  .for-christian-content,
+  #block-views-activity-to-event-block {
+    display: none;
+  }
 }
 
-.override-activity-events + #block-views-activity-to-event-block {
-  display: none; // Don't display the Activity to Event block if another block overrides it
-}
