--- a/css/style.css
+++ b/css/style.css
@@ -8532,9 +8532,21 @@ table .checkbox input[type="checkbox"] {
   }
 }
 .content-region .block-system .block-panel .content .video-filter {
-  width: 400px;
-  height: 225px;
   max-width: 100%;
+  width: 408px;
+  height: 229px;
+}
+@media screen and (min-width: 992px) {
+  .content-region .block-system .block-panel .content .video-filter {
+    width: 617px;
+    height: 347px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .content-region .block-system .block-panel .content .video-filter {
+    width: 560px;
+    height: 313px;
+  }
 }
 .content-region .block-system .block-panel .profile .user-picture {
   float: right;
