--- a/less/content.less
+++ b/less/content.less
@@ -577,9 +577,20 @@
 		}
 
 		.video-filter {
-			width: 400px;
-			height: 225px;
 			max-width: 100%;
+
+			// Mobile
+				width: 408px;
+				height: 229px;
+			@media @normal {
+				width: 617px;
+				height: 347px;
+			}
+			@media @wide {
+				width: 560px;
+				height: 313px;
+			}
+
 		}
 	}
 
