Add class paragraph-plus-spacer

--- a/less/content.less
+++ b/less/content.less
@@ -746,10 +746,18 @@
 	}
 }
 
+/*
+ * Rather than having an empty paragraph, format the previous paragraph with a
+ * margin-bottom that is the same as if an empty paragraph was present. This is
+ * a paragraph line-height plus 2 paragraph margin-bottoms (1 + 2 * 0.5 = 2).
+ */
+.paragraph-plus-spacer {
+  margin-bottom: (@line-height-computed * 2);
+}
+
 .page-node-2390 {
   .for-christian-content,
   #block-views-activity-to-event-block {
     display: none;
   }
 }
-
