--- a/css/style.css
+++ b/css/style.css
@@ -8891,6 +8891,14 @@ textarea.webform-component input.email {
 .link-button a {
   color: white;
 }
+/*
+ * Rather than having an empty paragraph, format the previous paragraph with a
+ * margin-bottom that is the same as if an empty paragraph was present. This is
+ * a paragraph line-height plus 2 paragraph margin-bottoms (1 + 2 * 0.5 = 2).
+ */
+.paragraph-plus-spacer {
+  margin-bottom: 40px;
+}
 .page-node-2390 .for-christian-content,
 .page-node-2390 #block-views-activity-to-event-block {
   display: none;
